Prevent double-scroll on the form on mobile devices

--- a/src/app/components/banner/banner.component.scss
+++ b/src/app/components/banner/banner.component.scss
@@ -31,10 +31,14 @@
     justify-content: flex-end;
     padding: 0px 10px 0px 10px;
     width: calc(100% - 20px);
+
     #header_text {
       font-weight: initial;
       margin: 0px;
       font-size: 16px;
+      max-width: calc(100% - 180px);
+      text-align: center;
+      line-height: 25px;
     }
 
     #maidcentral_logo {
