--- a/src/app/components/form/form.component.scss
+++ b/src/app/components/form/form.component.scss
@@ -15,8 +15,9 @@
   }
 
   #form_inputs {
-    max-height: calc(100vh - 160px);
+    max-height: calc(100vh - 250px);
     overflow: auto;
+    margin-bottom: 20px;
   }
 
   .open,
